--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>br.com.feedsync.FeedSync.FeedSyncApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
