--- a/feedsync-api/src/main/resources/application.yml
+++ b/feedsync-api/src/main/resources/application.yml
@@ -5,3 +5,5 @@ spring:
     exclude:
       - org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
+jwt:
+  secret: IVy3wDtLYZBHxexS6cLusowwYOvP76iN
