Feature OpenApi , FeignClient

--- a/feedsync-api/src/main/resources/application.yml
+++ b/feedsync-api/src/main/resources/application.yml
@@ -7,3 +7,9 @@ spring:
 
 jwt:
   secret: IVy3wDtLYZBHxexS6cLusowwYOvP76iN
+
+clients:
+  notification-service:
+    url: http://notification-service:8080
+  report-service:
+    url: http://report-service:8080
